--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   border: none;
-  box-sizing: 'border-box';
+  box-sizing: border-box;
 }
 
 body, input, button, textarea, select {
