styles: add styles overlay

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -69,3 +69,9 @@
   padding: 120px;
   border-radius: 4px;
 }
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  inset: 0;
+}
