--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -75,3 +75,13 @@
   position: fixed;
   inset: 0;
 }
+
+.closeModalButton {
+  width: 100%;
+  padding: 12px 20px;
+  margin-top: 16px;
+  background: #8257e5;
+  border-radius: 4px;
+  color: #fff;
+  font-size: 18px;
+}
